[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/guy_with_cape_32x16.png" type="Texture" id=1]
[ext_resource path="res://sprites/tempSword.png" type="Texture" id=2]
[ext_resource path="res://scripts/sword.gd" type="Script" id=3]
[ext_resource path="res://scripts/player.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 16.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.0
height = 26.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 24.0

[node name="player" type="RigidBody2D"]
mode = 2
mass = 5.0
gravity_scale = 2.0
script = ExtResource( 4 )
damageStrength = 40.0
lifeSteal = 0.1
maxHp = 100.0
invincibilityTime = 0.2

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.90735e-06, 7.62939e-06 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 20.0

[node name="sword" type="RigidBody2D" parent="."]
collision_layer = 2
collision_mask = 4
mass = 2.0
gravity_scale = 2.0
script = ExtResource( 3 )
rotationSpeed = 10.0
onContactSpeedMultiplier = 0.5

[node name="TempSword" type="Sprite" parent="sword"]
position = Vector2( 26, 0 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sword"]
position = Vector2( 26, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="PinJoint2D" type="PinJoint2D" parent="sword"]
node_a = NodePath("..")
node_b = NodePath("../..")
softness = 3.0

[node name="Area2D" type="Area2D" parent="sword"]
collision_layer = 2
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="sword/Area2D"]
modulate = Color( 0.803922, 0.368627, 0.368627, 1 )
self_modulate = Color( 0.929412, 0.435294, 0.435294, 1 )
position = Vector2( 26, 0 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Label" type="Label" parent="sword"]
margin_left = -2.0
margin_top = -31.0
margin_right = 38.0
margin_bottom = -17.0

[connection signal="death" from="." to="sword" method="_on_player_death"]
[connection signal="body_entered" from="sword/Area2D" to="sword" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="sword/Area2D" to="sword" method="_on_Area2D_body_exited"]
